.block & .content changed to .panel & .panel-body

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,6 +56,6 @@
                 %strong= msg
       .row-fluid
         .span12
-          .block
-            .content
+          .panel
+            .panel-body
               = yield
