--- a/app/views/office/events/past.html.haml
+++ b/app/views/office/events/past.html.haml
@@ -1,4 +1,4 @@
-.block
-  .content
+.panel
+  .panel-body
     = render 'events', :events => events, caption: pluralize(events.count, 'past event')
 
