--- a/app/views/office/payments/index.html.haml
+++ b/app/views/office/payments/index.html.haml
@@ -1,11 +1,11 @@
-.block
-  .content
+.panel
+  .panel-body
     = controls do |c|
       - c << new_button
 
     %h2
       Payments by #{registration.full_name} for #{registration.event_name}
 
-  .content
+  .panel-body
     = render 'summary'
     = render 'payments', payments: @payments if @payments.any?
