--- a/app/views/office/public_signups/index.html.haml
+++ b/app/views/office/public_signups/index.html.haml
@@ -1,5 +1,5 @@
-.block
-  .content
+.panel
+  .panel-body
     %h2
       #{pluralize(@public_signups.flatten.count, 'signup is', 'signups are')}
       pending approval
