--- a/app/views/users/members/edit.html.haml
+++ b/app/views/users/members/edit.html.haml
@@ -1,5 +1,5 @@
-.block
-  .content
+.panel
+  .panel-body
     %h2 Editing team signup for #{@member.team.name}
     %p
       If you can not longer be on team, then please sign off.
