--- a/app/views/users/registrations/index.html.haml
+++ b/app/views/users/registrations/index.html.haml
@@ -1,8 +1,8 @@
-.block
-  .content
+.panel
+  .panel-body
     %h2 Your registrations
 
-  .content
+  .panel-body
     %p
       Click on the workshop title to see the workshop roster.
 
