--- a/app/views/office/events/index.html.haml
+++ b/app/views/office/events/index.html.haml
@@ -1,3 +1,3 @@
-.block
-  .content
+.panel
+  .panel-body
     = render 'events', :events => events, caption: pluralize(events.count, 'future event')
