--- a/app/views/office/events/show.html.haml
+++ b/app/views/office/events/show.html.haml
@@ -1,5 +1,5 @@
-.block
-  .content
+.panel
+  .panel-body
     = controls do |c|
       - c << registrations_button(event)
       - c << edit_button
