--- a/app/views/office/memberships/show.html.haml
+++ b/app/views/office/memberships/show.html.haml
@@ -1,5 +1,5 @@
-.block
-  .content
+.panel
+  .panel-body
     = controls do |c|
       - c << edit_button
 
@@ -10,7 +10,7 @@
     - if @membership.audits.any?
       = render 'office/shared/audits', :audits => @membership.audits.descending
 
-  .content
+  .panel-body
     = controls do |c|
       - c << new_button(label: 'New Registration', path: new_office_angel_registration_path(@membership.angel))
 
