--- a/app/views/office/registrations/map/index.html.haml
+++ b/app/views/office/registrations/map/index.html.haml
@@ -1,3 +1,3 @@
-.block
+.panel
   = gmaps(markers: { data: @json, options: { do_clustering: true, randomize: false, clusterer_maxZoom: 5 } })
   = render 'search'
