--- a/app/views/office/site_defaults/index.html.haml
+++ b/app/views/office/site_defaults/index.html.haml
@@ -1,4 +1,4 @@
-.block
-  .content
+.panel
+  .panel-body
     %h2= pluralize(site_defaults.count, 'default')
     = render 'site_defaults', :site_defaults => site_defaults
