.row-fluid to .row

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,14 +47,14 @@
       %h1= title
 
     #container
-      .row-fluid
+      .row
         .span12
           .flashes
             - flash.each do |key, msg|
               .alert.alert-message.fade.in{title: key.to_s.humanize, class: "#{key}", data: { alert: 'alert'}}
                 = link_to("&times;".html_safe, '#', data: {dismiss: 'alert'}, class: 'close')
                 %strong= msg
-      .row-fluid
+      .row
         .span12
           .panel
             .panel-body
