--- a/app/views/office/angels/_filter.html.haml
+++ b/app/views/office/angels/_filter.html.haml
@@ -1,4 +1,4 @@
-.row-fluid
+.row
   .span12
     .form-filter
       = simple_form_for @search, url: url_for, html: {class: 'form form-inline'} do |f|
