--- a/app/views/office/registrations/_payment.html.haml
+++ b/app/views/office/registrations/_payment.html.haml
@@ -4,7 +4,7 @@
   - c << link_to(new_office_registration_payment_path(registration), class: 'btn') do
     - icon('icon-plus-sign') + 'Add Payment'
 
-.row-fluid
+.row
   .span5
     %table.table.table-key-values
       %caption
