--- a/app/views/users/teams/_members.html.haml
+++ b/app/views/users/teams/_members.html.haml
@@ -1,9 +1,9 @@
-.row-fluid
+.row
   .span6
-    .row-fluid
+    .row
       %b Females
     = render members.females
   .span6
-    .row-fluid
+    .row
       %b Males
     = render members.males
