--- a/app/views/office/members/_member.html.haml
+++ b/app/views/office/members/_member.html.haml
@@ -1,5 +1,5 @@
 - member = member.decorate
-.row-fluid.team-member
+.row.team-member
   %span.name= link_to(member.full_name, [:edit, :office, member.team, member])
   %span.role= "[#{member.role}]" if member.role.present?
   %span.status= member.status
