--- a/app/views/office/teams/_notes.html.haml
+++ b/app/views/office/teams/_notes.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for([:office, team], html: {class: 'form form-inline'}) do |f|
-  .row-fluid
+  .row
     .span
       = f.input :notes, label: false, input_html: { rows: 5, cols: 60, class: 'wide-textarea' }
     .span
