--- a/app/views/office/teams/_team_stats.html.haml
+++ b/app/views/office/teams/_team_stats.html.haml
@@ -1,5 +1,5 @@
 - stats = TeamStatsDecorator.new(team_stats)
-.row-fluid
+.row
   .span
     %table.table
       %thead
@@ -15,7 +15,7 @@
     %span{class: stats.full? ? 'dot-green' : 'dot-red'}= stats.delta_with_symbol
 
 
-.row-fluid
+.row
   .span
     %table.table
       %thead
