--- a/app/views/layouts/_layout.html.haml
+++ b/app/views/layouts/_layout.html.haml
@@ -14,7 +14,7 @@
     /[if lt IE 9]
       %script{src: 'https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js'}
       %script{src: 'https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js'}
-  %body
+  %body{class: page_class}
     .navbar.navbar-default
       .container-fluid
         .navbar-header
