--- a/app/views/office/teams/index.html.haml
+++ b/app/views/office/teams/index.html.haml
@@ -1,4 +1,5 @@
-.panel
+.panel.panel-default
+  .panel-heading
+    %h3= pluralize(@teams.size, 'Upcoming Team')
   .panel-body
-    %h2= pluralize(@teams.size, 'Upcoming Team')
     = render 'teams', teams: @teams
