--- a/app/views/office/payments/_payments.html.haml
+++ b/app/views/office/payments/_payments.html.haml
@@ -1,8 +1,8 @@
 .row
-  .span5
+  .col-sm-6
     %table.table.table-striped
       %caption
-        %h6 Details
+        %h5 Details
       %thead
         %tr
           %th Date
