--- a/app/views/office/payments/_summary.html.haml
+++ b/app/views/office/payments/_summary.html.haml
@@ -1,9 +1,9 @@
-- r = registration
+- r = @registration
 .row
-  .span5
+  .col-sm-6
     %table.table.table-key-values
       %caption
-        %h6 Payment Summary Information
+        %h5 Summary
       %tbody
         %tr
           %th Cost
