--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -17,7 +17,7 @@
         %h1
           HAI UK
       #content
-        = _('uk.layout1.content_top')
+        = sd('uk.layout1.content_top')
         #column2
           #haidbcontainer
             #flash{ :'padding-left' => '60px' }
