--- a/app/views/uk/public_signups/_registration_form.html.haml
+++ b/app/views/uk/public_signups/_registration_form.html.haml
@@ -14,17 +14,17 @@
 = r.input :mobile_phone,  :input_html => {:size => 20}
 = r.input :work_phone,  :input_html => {:size => 20}
 
-.instructions= _('public_signup.form.workshop_information')
+.instructions= sd('public_signup.form.workshop_information')
 = r.input :special_diet
 = r.input :lift, options_for_lift(r)
 
-.instructions= _('public_signup.form.note')
+.instructions= sd('public_signup.form.note')
 = r.input :notes, options_for_note(r)
 
 = r.input :how_hear, options_for_how_hear(r)
 = r.input :previous_event, options_for_previous_event(r)
 
-.instructions= _('public_signup.form.previous_workshop.instructions')
+.instructions= sd('public_signup.form.previous_workshop.instructions')
 = r.input :highest_level, label: SiteDefault.get('public_signup.form.previous_workshop.highest_level'), input_html: {:size => 5}
 = r.input :highest_location, label: SiteDefault.get('public_signup.form.previous_workshop.highest_location'),  input_html: {:size => 30}
 = r.input :highest_date, label: SiteDefault.get('public_signup.form.previous_workshop.highest_date'), input_html: {:size => 20}
