--- a/app/views/office/site_defaults/new.html.haml
+++ b/app/views/office/site_defaults/new.html.haml
@@ -1,5 +1,6 @@
-.panel
-  .panel-body
-    %h2 New Site Default
+.panel.panel-default
+  .panel-heading
+    %h3 New Key
 
+  .panel-body
     = render 'form'
