--- a/app/views/office/site_defaults/_site_defaults.html.haml
+++ b/app/views/office/site_defaults/_site_defaults.html.haml
@@ -4,13 +4,9 @@
       %th Key
       %th Locales
       %th Description
-      %th
   %tbody
     - site_defaults.each do |d|
       %tr
-        %td= d.display_name
+        %td= link_to(d.display_name, office_site_default_path(d))
         %td= d.translations.map(&:locale).join(", ")
         %td= d.description.split('.').first
-        %td= link_to_show(office_site_default_path(d))
-
-= render 'office/shared/table_options', :table => site_defaults
