--- a/app/views/office/site_defaults/email_names/_email_name.html.haml
+++ b/app/views/office/site_defaults/email_names/_email_name.html.haml
@@ -1,15 +1,14 @@
 - email_name.emails.each do |email|
-  %table.table.table-key-values.table-striped
-    %tbody
-      %tr
-        %th Locale
-        %td= email.locale
-      %tr
-        %th Subject
-        %td= email.subject
-      %tr
-        %th Body
-        %td= email.body
-
-  - if email.audits.any?
-    = render 'office/shared/audits', :audits => email.audits.descending
+  .panel.panel-default
+    .panel-heading
+      %h4 Language #{email.locale}
+    .panel-body
+      %dl.dl-horizontal
+        %dt Subject
+        %dd(ng-non-bindable)
+          %pre= email.subject
+        %dt Body
+        %dd(ng-non-bindable)
+          %pre= email.body
+      - if email.audits.any?
+        = render 'office/shared/audits', :audits => email.audits.descending
