--- a/app/views/office/site_defaults/email_names/new.html.haml
+++ b/app/views/office/site_defaults/email_names/new.html.haml
@@ -1,5 +1,6 @@
-.panel
-  .panel-body
-    %h2 New Email
+.panel.panel-default
+  .panel-heading
+    %h3 New Email
 
-    = render 'form', email_name: email_name
+  .panel-body
+    = render 'form'
