--- a/app/views/office/site_defaults/email_names/show.html.haml
+++ b/app/views/office/site_defaults/email_names/show.html.haml
@@ -1,17 +1,12 @@
-.panel
-  .panel-body
+.panel.panel-default
+  .panel-heading
     = controls do |c|
       - c << edit_button
 
-    %h2 #{email_name.name} Template
-
-    = render 'email_name', email_name: email_name
+    %h3 Email #{@email_name.name}
 
   .panel-body
-    %h2
+    = render 'email_name', email_name: @email_name
 
-    - if email_name.events.size > 0
-      %h3 Used by #{pluralize(email_name.events.size, 'event')}
-      = render 'events', :events => email_name.events
-    - else
-      %h3 Not used by any events.
+    %h3 Used by #{pluralize(@email_name.events.size, 'event')}
+    = render 'events', events: @email_name.events
