--- a/app/views/office/angels/_angel.html.haml
+++ b/app/views/office/angels/_angel.html.haml
@@ -1,6 +1,4 @@
 %table.table.table-key-values
-  %caption
-    %h6 Angel Information
   %tbody
     %tr
       %th Name
@@ -18,7 +16,7 @@
       %td= compact_phones(angel)
     %tr
       %th Address
-      %td= compact_address(angel)
+      %td= br(compact_address(angel))
     %tr
       %th Payment
       %td= compact_payment(angel)
