--- a/app/views/office/angels/index.html.haml
+++ b/app/views/office/angels/index.html.haml
@@ -5,7 +5,7 @@
       - c << csv_button
       - c << vcard_button
       - c << map_button
-    %h3 Contact List
+    %h3 Angels
 
   .panel-body
-    = render 'list', :angels => angels
+    = render 'angels', angels: @angels
