--- a/app/views/office/angels/new.html.haml
+++ b/app/views/office/angels/new.html.haml
@@ -1,5 +1,6 @@
-.panel
-  .panel-body
-    %h2 New Angel
+.panel.panel-default
+  .panel-heading
+    %h3 New Angel
 
+  .panel-body
     = render 'form'
