registration map clean up

--- a/app/views/office/registrations/map/index.html.haml
+++ b/app/views/office/registrations/map/index.html.haml
@@ -1,3 +1,7 @@
-.panel
-  = gmaps(markers: { data: @json, options: { do_clustering: true, randomize: false, clusterer_maxZoom: 5 } })
-  = render 'search'
+.panel.panel-default
+  .panel-heading
+    %h3 Mapping #{pluralize(@registrations.size, 'registration')}
+
+  .panel-body
+    = gmaps({markers: {data: @json, options: {do_clustering: true, randomize: false, clusterer_maxZoom: 5}}}, false, true)
+    = render 'search'
