--- a/app/views/office/registrations/_contact.html.haml
+++ b/app/views/office/registrations/_contact.html.haml
@@ -15,7 +15,4 @@
       %td= compact_phones(r)
     %tr
       %th Address
-      %td
-        .row
-          .span4= compact_address(r)
-          .span2= link_to(icon('icon-map-marker') + "Map", office_event_map_index_path(r.event, id: r), class: 'btn') if r.geocoded?
+      %td= br(compact_address(r))
