--- a/app/views/office/registrations/map/_map_info.html.haml
+++ b/app/views/office/registrations/map/_map_info.html.haml
@@ -12,5 +12,5 @@
         %td= gravatar_image(r.angel.gravatar) if r.angel
         %td= link_to_show(office_event_registration_path(r.event, r), r.full_name)
         %td= r.email
-        %td= compact_address(r)
+        %td= br(compact_address(r))
         %td= compact_phones(r)
