registration map clean up part 2

--- a/app/views/office/registrations/show.html.haml
+++ b/app/views/office/registrations/show.html.haml
@@ -4,7 +4,7 @@
   .panel-heading
     = controls do |c|
       - c << edit_button
-      - (c << map_button(path: office_event_map_index_path(r.event, id: r))) if r.geocoded?
+      - (c << map_button(path: map_office_event_report_path(r.event, q: {id_eq: r}))) if r.geocoded?
 
     %h3= r.full_name
 
