--- a/app/views/office/angels/_registrations.html.haml
+++ b/app/views/office/angels/_registrations.html.haml
@@ -12,7 +12,7 @@
   %tbody
     - registrations.by_start_date.each do |r|
       %tr
-        %td= link_to_show(office_event_registration_path(r.event, r), r.event_name)
+        %td= link_to_show(office_registration_path(r), r.event_name)
         %td= r.level
         %td= r.role
         %td= local_currency r.cost
