--- a/app/views/office/event_reports/_map_info.html.haml
+++ b/app/views/office/event_reports/_map_info.html.haml
@@ -10,7 +10,7 @@
     - registrations.each do |r|
       %tr
         %td= gravatar_image(r.angel.gravatar) if r.angel
-        %td= link_to_show(office_event_registration_path(r.event, r), r.full_name)
+        %td= link_to_show(office_registration_path(r), r.full_name)
         %td= r.email
         %td= br(compact_address(r))
         %td= compact_phones(r)
