--- a/app/views/office/event_reports/_site.html.haml
+++ b/app/views/office/event_reports/_site.html.haml
@@ -15,7 +15,7 @@
   %tbody
     - registrations.by_first_name.each do |r|
       %tr
-        %td.name= link_to_show(office_event_registration_path(r.event, r), r.full_name)
+        %td.name= link_to_show(office_registration_path(r), r.full_name)
         %td.center= r.gender.first
         %td.center= r.special_diet
         %td.center= r.lift
