--- a/app/views/office/angels/_angels.html.haml
+++ b/app/views/office/angels/_angels.html.haml
@@ -16,8 +16,8 @@
           = link_to_show(office_angel_path(a), a.full_name)
           = angel_membership_status(a)
         %td= a.email
-        %td= br(compact_address(a))
-        %td= compact_phones(a)
+        %td= simple_format(compact_address(a))
+        %td= simple_format(compact_phones(a), {}, sanitize: false)
         %td= a.highest_level
 
 = render 'filter'
