--- a/app/views/office/event_reports/_map_info.html.haml
+++ b/app/views/office/event_reports/_map_info.html.haml
@@ -12,5 +12,5 @@
         %td= gravatar_image(r.angel.gravatar) if r.angel
         %td= link_to_show(office_registration_path(r), r.full_name)
         %td= r.email
-        %td= br(compact_address(r))
-        %td= compact_phones(r)
+        %td= simple_format(compact_address(r))
+        %td= simple_format(compact_phones(r), {}, sanitize: false)
