--- a/app/views/users/angels/_form.html.haml
+++ b/app/views/users/angels/_form.html.haml
@@ -1,7 +1,8 @@
 = vertical_form(@angel, url: users_angel_path) do |f|
   = f.error_notification
 
-  = f.input :email, disabled: true, hint: link_to('Click here if you need to change your email address', edit_user_registration_path)
+  - if @angel.persisted?
+    = f.input :email, disabled: true, hint: link_to('Click here if you need to change your email address', edit_user_registration_path)
   = f.input :first_name
   = f.input :last_name, :input_html => {:min => 3}
   = f.input :gender, options_for_gender(f)
